--- a/src/main/resources/flxs/menuicons/hello-view.fxml
+++ b/src/main/resources/flxs/menuicons/hello-view.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="flxs.menuicons.HelloController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="flxs.menuicons.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <MenuBar>
+   <MenuBar fx:id="menubar">
      <menus>
        <Menu mnemonicParsing="false" text="File">
          <items>
